--- a/SourceCode/2023/Dec2023/YeafiAL/Task 10/Main.xaml
+++ b/SourceCode/2023/Dec2023/YeafiAL/Task 10/Main.xaml
@@ -79,7 +79,7 @@
         <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:InputDialog Options="{x:Null}" DisplayName="Input Dialog - Created input options from 1 to 7" sap:VirtualizedContainerService.HintSize="496.6666666666667,300.6666666666667" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Please select numbers from 1 to to 7" OptionsString="1;2;3;4;5;6;7;" Title="User Selection">
+    <ui:InputDialog Options="{x:Null}" DisplayName="Input Dialog - Created input options from 1 to 7" sap:VirtualizedContainerService.HintSize="496.6666666666667,300.6666666666667" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Please select numbers from 1 to to 7" OptionsString="1;2;3;4;5;6;7;" Title="User Selection of Day">
       <ui:InputDialog.Result>
         <OutArgument x:TypeArguments="x:Int32">[UserInput]</OutArgument>
       </ui:InputDialog.Result>
